--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   "scripts": {
     "dev:client": "vite --config vite.config.ts",
     "dev:client:open": "vite --config vite.config.ts --open",
-    "dev:server": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register server/index.ts",
+    "dev:server": "cross-env NODE_ENV=development ts-node-dev --respawn --transpile-only -r tsconfig-paths/register server/index.ts",
     "dev": "npm run dev:client & npm run dev:server",
     "build:client": "vite build --config vite.config.ts",
     "build:server": "tsc -p tsconfig.json",
     "build": "npm run build:client && npm run build:server",
+    "start": "cross-env NODE_ENV=production node dist/server/index.js",
     "test": "echo \"Add your test script here\"",
     "db:push": "drizzle-kit push",
     "db:generate": "drizzle-kit generate",
