--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-hook-form": "^7.50.1",
     "react-resizable-panels": "^3.0.2",
     "recharts": "^2.12.0",
+    "session-file-store": "^1.5.0",
     "tailwind-merge": "^2.2.1",
     "vaul": "^1.1.2",
     "wouter": "^2.12.1",
@@ -95,6 +96,7 @@
     "@types/pdfkit": "^0.13.9",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "@types/session-file-store": "^1.2.5",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.17",
     "cross-env": "^7.0.3",
